add symbol;add api;byt not tests

--- a/Editor/Saro.Terminal.Editor.asmdef
+++ b/Editor/Saro.Terminal.Editor.asmdef
@@ -1,5 +1,6 @@
 {
-    "name": "Terminal.Editor",
+    "name": "Saro.Terminal.Editor",
+    "rootNamespace": "",
     "references": [
         "GUID:dbdaefc3ac17a37429a94d14041921ef"
     ],
