--- a/Runtime/Saro.Terminal.asmdef
+++ b/Runtime/Saro.Terminal.asmdef
@@ -1,5 +1,6 @@
 {
-    "name": "Terminal",
+    "name": "Saro.Terminal",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
