--- a/Tests/Saro.Terminal.Tests.asmdef
+++ b/Tests/Saro.Terminal.Tests.asmdef
@@ -1,5 +1,6 @@
 {
-    "name": "Terminal.Tests",
+    "name": "Saro.Terminal.Tests",
+    "rootNamespace": "",
     "references": [
         "GUID:dbdaefc3ac17a37429a94d14041921ef"
     ],
